<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Pantalla de bienvenida -->
    <string name="app_name">Risk of WarGames - WH</string>
    <string name="menu_button">Ir al Menú</string>
    <string name="welcome_title">BIENVENIDO A\nRISK OF WARGAMES</string>
    <string name="welcome_text">Con esta aplicación podrás realizas calculos rápidos de probabilidades para tomar las mejores decisiones en el campo de batalla.\nPulsa el botón para acceder al menú</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="hello_world">Hello world!</string>
    <!-- Caja de opciones -->
    <string name="action_settings">Settings</string>
    <string name="action_leadership">Liderazgo</string>
    <string name="action_charge">Cargas</string>
    <string name="action_magic">Magia</string>
    <string name="action_close">Cerrar</string>
    <!-- Chequeos de liderazgo -->
    <string name="title_activity_leadership_test">Chequeo de Liderazgo</string>
    <string name="input_leadership">Liderazgo:</string>
    <string name="input_add_dice">Dado extra:</string>
    <string name="input_add_dice_option">Calcular:</string>
    <string name="input_add_dice_max">Mayor resultado</string>
    <string name="input_add_dice_min">Menor resultado</string>
    <string name="leadership_result">Tienes un %1$d por ciento de pasar el chequeo</string>
    <string name="result_button">Calcular</string>


</resources>
