<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF3BB"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="name.vicentvalls.riskofwargames_wh.LeadershipTest">

    <TextView android:id="@+id/leadership_title"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:keepScreenOn="true"
        android:textColor="#660000"
        android:textStyle="bold"
        android:textSize="35sp"
        android:gravity="center"
        android:text="@string/title_activity_leadership_test" />
    <TextView android:id="@+id/leadership_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:keepScreenOn="true"
        android:textColor="#660000"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/input_leadership"
        android:layout_below="@id/leadership_title"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="2"
        android:id="@+id/input_leadership"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/leadership_title"
        android:layout_toRightOf="@+id/leadership_option"
        android:layout_toEndOf="@+id/leadership_option"
        android:gravity="fill_horizontal"
        android:visibility="visible"
        android:singleLine="true"
        android:numeric="integer|signed" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_add_dice"
        android:id="@+id/input_add_dice"
        android:layout_below="@+id/leadership_option"
        android:layout_marginTop="25dp"
        android:onClick="showRadioGroup"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/input_add_dice"
        android:layout_alignParentRight="true"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/input_add_dice_min"
            android:id="@+id/input_add_dice_min" />
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_add_dice_max"
            android:id="@+id/input_add_dice_max"
        />
    </RadioGroup>
    <LinearLayout android:id="@+id/result_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/leadership_option"
        android:layout_marginRight="25dp"
        android:visibility="invisible"
        tools:ignore="UselessParent">
            <TextView android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:keepScreenOn="true"
                android:textColor="#660000"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:text="@string/leadership_result" />
    </LinearLayout>
    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_gravity="center"
        android:id="@+id/screen">

        <LinearLayout android:id="@+id/fullscreen_content_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button android:id="@+id/result_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="calcular"
                android:text="@string/result_button" />

        </LinearLayout>
    </FrameLayout>


</RelativeLayout>
