<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF3BB"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Welcome">
    <!-- The primary full-screen view. This can be replaced with whatever view
             is needed to present your content, e.g. VideoView, SurfaceView,
             TextureView, etc. -->
    <TextView android:id="@+id/fullscreen_title"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:keepScreenOn="true"
        android:textColor="#660000"
        android:textStyle="bold"
        android:textSize="35sp"
        android:gravity="center"
        android:text="@string/welcome_title" />

    <TextView android:id="@+id/fullscreen_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        android:textColor="#660000"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/welcome_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_gravity="center"
        android:id="@+id/screen">

        <LinearLayout android:id="@+id/fullscreen_content_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button android:id="@+id/menu_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/menu_button" />

        </LinearLayout>
    </FrameLayout>

</RelativeLayout>
